NONE: change fecru to run in-process
git-svn-id: https://studio.atlassian.com/svn/AMPS/trunk@44593 2c54a935-e501-0410-bc05-97a93f6bca70